--- a/hw1/index.html
+++ b/hw1/index.html
@@ -28,19 +28,19 @@
 	<body>
 		<div class="container">
 		<h1>CS184/284A Spring 2025 Homework 1 Write-Up</h1>
-		<div style="text-align: center;">Names: </div>
+		<div style="text-align: center;">Names: Nathan Ortega, Eric Xie-McCarthy</div>
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-arctic-monkeyss/">https://cal-cs184-student.github.io/hw-webpages-arctic-monkeyss/</a>
 		
 		<br>
 			
-		Link to GitHub repository: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw1-arctic-monkeys">https://github.com/cal-cs184-student/sp25-hw1-arctic-monkeys</a>
 
 		<figure>
 			<img src="lion.jpg" alt="Lion" style="width:50%"/>
-			<figcaption>You can add images with captions!</figcaption>
+			<figcaption>A Really Cool Lion!</figcaption>
 		</figure>
 
 		<!--
