--- a/hw2/index.html
+++ b/hw2/index.html
@@ -28,15 +28,15 @@
 	<body>
 		<div class="container">
 		<h1>CS184/284A Spring 2025 Homework 2 Write-Up</h1>
-		<div style="text-align: center;">Names: </div>
+		<div style="text-align: center;">Names: Eric Xie-McCarthy, Nathan Ortega</div>
 
 		<br>
 
-		Link to webpage: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-arctic-monkeyss/">https://cal-cs184-student.github.io/hw-webpages-arctic-monkeyss/</a>
 
 		<br>
 		
-		Link to GitHub repository: (TODO) <a href="https://cs184.eecs.berkeley.edu/sp25">cs184.eecs.berkeley.edu/sp25</a>
+		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw2-arctic-monkeys-on-tour">https://github.com/cal-cs184-student/sp25-hw2-arctic-monkeys-on-tour </a>
 
 		<figure>
 			<img src="teapot.png" alt="Teapot" style="width:50%"/>
@@ -53,36 +53,66 @@
 		<h2>Section I: Bezier Curves and Surfaces</h2>
 
 		<h3>Part 1: Bezier curves with 1D de Casteljau subdivision</h3>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		De Casteljau’s subdivision algorithm makes up a series of subdivisions that recursively creates linear interpolations between the control points that are specified. The result of running through the algorithm once is a point that lies on the Bezier curve. To implement it we followed the equation: p'<sub>i</sub> which is the next subdivision level and the current subdivision of p<sub>i</sub>.  
+		<br>
+		
+		p'<sub>i</sub> = lerp(p<sub>i</sub>, p<sub>i + 1</sub>, t) = (1 - t) * p<sub>i</sub> + t * p<sub>i + 1</sub> where p<sub>i + 1</sub> is the connecting control point. The value t represents the weight or “influence” of each control point on the final Bezier curve. 
 
-		<p>Here is an example 2x2 gridlike structure using an HTML table. Each <b>tr</b> is a row and each <b>td</b> is a column in that row. You might find this useful for framing and showing your result images in an organized fashion.</p>
+		<!-- <p>Here is an example 2x2 gridlike structure using an HTML table. Each <b>tr</b> is a row and each <b>td</b> is a column in that row. You might find this useful for framing and showing your result images in an organized fashion.</p> -->
 		<div style="display: flex; flex-direction: column; align-items: center;">
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="teapot.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="./task_1/part_1.png" width="400px"/>
+				  <figcaption>First subdivision level</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="teapot.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="./task_1/part_2.png" width="400px"/>
+				  <figcaption>Second subdivision level</figcaption>
 				</td>
 			  </tr>
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="teapot.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="./task_1/part_3.png" width="400px"/>
+				  <figcaption>Third subdivision level</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="teapot.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="./task_1/part_4.png" width="400px"/>
+				  <figcaption>Fourth subdivision level</figcaption>
 				</td>
+			  </tr>
+			  <tr>
+				<td style="text-align: center;">
+				  <img src="./task_1/part_5.png" width="400px"/>
+				  <figcaption>Final subdivision level and point that would be on Bezier Curve</figcaption>
+				</td>
+				<td style="text-align: center;">
+				  <img src="./task_1/part_6_final_bezier.png" width="400px"/>
+				  <figcaption>Full Bezier Curve with subdivision levels</figcaption>
+				</td>
+			  </tr>
+			  <tr>
+				<td style="text-align: center;">
+				  <img src="./task_1/bezier_with_control.png" width="400px"/>
+				  <figcaption>Full Bezier Curve</figcaption>
+				</td>
+				<td style="text-align: center;">
+				  <img src="./task_1/modified_control_points.png" width="400px"/>
+				  <figcaption>Bezier Curve with Modified Control Points</figcaption>
+				</td>
+			  </tr>
 			  </tr>
 			</table>
 		</div>
 
 		<h3>Part 2: Bezier surfaces with separable 1D de Casteljau</h3>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		To extend de Casteljau’s algorithm to Bezier surfaces we apply the same logic as task one and first parameterize each row of the control points with the parameter u resulting in one final point. We lerp over those new final single points and now parametrize over v until we have the final point that now lies on the Bezier surface. The result is a Bezier surface that is applied to the teapoint object. 
+
+		To implement this we used the evaluateStep function to output the next subdivision level. Evaluate1D was used to get the final single point on the Bezier line of parameter t and we used the evaluate function to find the point on the surface. So to find this point on the Bezier surface, we first call evaluate which calls evaluate1D on each row of the control points parametrized by u in a for loop and then add these final single points to the vector. With this series of final points which is done through calls to evaluateStep to do the lerps, we then parametrize over v using evaluate 1D to get the final single point that lies on the Bezier surface at the given parameter u and v. 
+				<figure>
+			<img src="task_2/teapot_mesh.png" alt="Teapot_mesh" style="width:100%"/>
+			<figcaption>Mesh rendered on teapot using de Casteljau's algorithm</figcaption>
+		</figure>
 
 		<h2>Section II: Triangle Meshes and Half-Edge Data Structure</h2>
 
