--- a/hw4/index.html
+++ b/hw4/index.html
@@ -56,19 +56,24 @@
 		<div style="display: flex; flex-direction: column; align-items: center;">
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
+			
 				<td style="text-align: center;">
-				  <img src="part1/onlyshearing.png" width="400px"/>
+				  <img src="part1/withonlyshearingpinned2.png" width="400px"/>
 				  <figcaption>only shearing.</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="part1/noconstraints.png" width="400px"/>
-				  <figcaption>no constraints.</figcaption>
+				  <img src="part1/withoutshearingpinned2.png" width="400px"/>
+				  <figcaption>no shearing</figcaption>
 				</td>
 			
 			  </tr>
 			  <td style="text-align: center;">
-				<img src="part1/all3constraints.png" width="400px"/>
+				<img src="part1/withallpinned2.png" width="400px"/>
 				<figcaption>All three contraints</figcaption>
+			  </td>
+			  <td style="text-align: center;">
+				<img src="part1/withoutallpinned2.png" width="400px"/>
+				<figcaption>Without three contraints</figcaption>
 			  </td>
 			  <tr>
 				</td>
