--- a/hw4/index.html
+++ b/hw4/index.html
@@ -247,6 +247,8 @@
 		</div>
 
 		<h2>Part 5: Shaders</h2>
+		A shader gives a schema on how to shade and shape each surface or model appropriately. Different shading frequencies and types can give the overall object a distinct and unique appearance. A shader includes lighting, color, finish, and texture. A vertex shader allows for transformations of the different vertex positions in space allowing to calculate per-vertex values which are inputted into the fragment shader which applies lighting, textures, and pixel effects outputting a final color for the pixel. They work together directly by designating different tasks that get sent down the graphics pipeline. The Vertex works to prep and process the geometric information while the fragment uses that data to calculate the per-pixel final color. 
+
 		
 		<div style="display: flex; flex-direction: column; align-items: center;">
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
